Create post, delete and Patch APIs. Combine routes to minimize redundant code

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/usman1372/Rest-API.git"
+    "url": "git+https://github.com/usman1372/Rest-APIs.git"
   },
   "keywords": [
     "Node.js",
